--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,10 +1,16 @@
-spring:
-  application:
-    name: service-registry 
-  cloud:
-    config:
-      uri: http://task-boards-configuration.herokuapp.com/
+server:
+  port: 8761
 
-management:
-  security:
-    enabled: false
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  password: ${EUREKA_USER_PASSWORD:password}
+        
+security:
+  user:
+    password: ${eureka.password}
