--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,16 +1,10 @@
-server:
-  port: 8761
+spring:
+  application:
+    name: service-registry
+  cloud:
+    config:
+      uri: http://task-boards-configuration.herokuapp.com/
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-  password: ${EUREKA_USER_PASSWORD:password}
-        
-security:
-  user:
-    password: ${eureka.password}
+management:
+  security:
+    enabled: false
