Testing remote configuraton

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: service-registry
   cloud:
     config:
-      uri: http://task-boards-configuration.herokuapp.com/
+      uri: https://task-boards-configuration.herokuapp.com/
 
 management:
   security:
